chore: temporary savepoint for ongoing fix